# FileLogger

./: CMakeLists.txt  main.cpp
include/: save_file.h
log/: result_2.txt  test.txt
src/: save_file.cpp
